# models_public

./: .gitignore  README.md  pyproject.toml  ruff.toml  ruff_defaults.toml
.github/workflows/: Format_09pwnmodel2.yml  Tests_09pwnmodel2.yml  format_notebooks.yml  test_notebooks.yml
docs/: modelstudie_uitvraag.md
modelscripts/09pwnmodel2/: 01_pwnmodel2.py
tests/: conftest.py  test_notebooks.py
